got basic employee mod/add window working

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -145,6 +145,14 @@ button {
     display: none;
 }
 
+#employee-forms {
+    display: none;
+}
+
+#employee-view {
+    display: none;
+}
+
 label {
     display: block;
 }
