--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -59,8 +59,8 @@
             document.getElementById('window-header').innerText = "Add New Addon";
 
             document.getElementById("inventory-forms").style.display = "none";
-            document.getElementById("menu-item-forms").style.display = "none";
-            document.getElementById("addon-forms").style.display = "block";
+            document.getElementById("menu-item-forms").style.display = "block";
+            document.getElementById("addon-forms").style.display = "none";
         }
         
     </script>
