--- a/views/cashier_order_page.ejs
+++ b/views/cashier_order_page.ejs
@@ -4,7 +4,6 @@
     <title>Cashier Order Page</title>
     <link rel="stylesheet" href="css/cashier-style.css">
 </head>
-<script src="../cashier-logic.js"></script>
 <body>
     <header>
     <h1>Orders</h1>
@@ -25,7 +24,8 @@
     <div class = "wrapper-class">
         <div class= "menu-items">
             <% for (var i in menu_items) {%>
-                <button class = "menu-item-button" id = "'<%=menu_items[i].name%>'" onclick="openPopup(this.id)">
+                <button class = "menu-item-button" 
+                    onclick="openPopup('<%=menu_items[i].name%>', '<%=menu_items[i].price%>')">
                     <img>
                     <h4>Name: <%=menu_items[i].name%></h4>
                     <h6>Price: <%=menu_items[i].price%></h6>
@@ -33,9 +33,7 @@
             <% } %>
         </div>
         <div class = "checkout-menu">
-            <div class="checkout-items" id = "checkout-items">
-
-            </div>
+            <div class="checkout-items" id = "checkout-items"></div>
             <button class ="checkout-button">Checkout</button>
         </div>
     </div>
@@ -52,18 +50,54 @@
 
     </footer>
 
+<script src="/js/cashier-logic.js"></script>
 
-<div class = "popup" id = "popup">
-    <button onclick="updateCheckout()"></button>
+</body>
+
+<div class = "popup-overlay" id = "popup-overlay">
+    <div class="popup" id="popup">
+        <div class = "dropdown" id="flavor-dropdown" style="padding: 20px; align-self: center;">
+            <button class = "dropbtn" id="flavor-display">Choose a flavor &darr;</button>
+            <div class = "dropdown-content">
+                <% for(var i in flavors){%>
+                    <button class="popupBtn" onclick="flavorDropdownUpdate('<%=flavors[i].name%>')"><%=flavors[i].name%></button>
+             <%}%>
+            </div>
+        </div>
+        <div>
+            <label for="Quantity" style="padding: 20px;">Quantity:</label>
+            <input type="text" id="Quantity" name="Quantity">
+        </div>
+
+        <!--https://stackoverflow.com/questions/26612700/ticks-for-type-range-html-input-->
+
+        <div class = "slider-container" id="sugar-slider" style="padding: 20px;">
+            <input type ="range" min="0" max="120" step="20" list="steplist">
+            <datalist id="steplist">
+                <option>0%</option>
+                <option>20%</option>
+                <option>50%</option>
+                <option>80%</option>
+                <option>100%</option>
+                <option>120%</option>
+            </datalist>
+        </div>
+        <div class = "slider-container" id="ice-slider" style="padding: 20px">
+            <input type ="range" min="0" max="3" step="1" list="steplist" onchange="updateIceSlider()">
+            <div>Ice Level:<span id="ice-level">Regular</span></div>
+        </div>
+        <div>
+            <% for (var i in addons){%>
+                <input type="checkbox" id="'<%addons[i].name%>'" name="addon" value="false">
+                <label for="addon" style="display: flex;">
+                    <img height="20px" width="20px">
+                    <h4><%=addons[i].name%></h4>
+                    <h6>Price: <%=addons[i].price%></h6>
+                </label>
+            <%}%>
+        </div>
+        <button onclick="returnToMenu()">Return to menu</button>
+        <button onclick="updateCheckout()">Proceed to checkout</button>
+    </div>
 </div>
-<!-- 
-    <% for (var i in menu_items) {%>
-        <p>Menu Item: <%=menu_items[i].name%>, price<%=menu_items[i].price%> </p>
-    <% } %>
-    <% for (var i in flavors) {%>
-        <p>Flavor: <%=flavors[i].name%> </p>
-    <% } %> -->
-
-
-
-<!--FF: creep is important for turbine engines. it elongates as usage increases-->
+</html>
