--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -41,9 +41,9 @@
             document.getElementById('modify-inventory-window-button').style.display = "none";
         }
 
-        var display_menu_item_modifier = function () {
-            document.getElementById('tea-type').value = "MOD";
-            document.getElementById('tea-price').value = "MOD";
+        var display_menu_item_modifier = function (name, price) {
+            document.getElementById('tea-type').value = name;
+            document.getElementById('tea-price').value = price;
 
             document.getElementById('window-header').innerText = "Modify Menu Item";
             document.getElementById('add-menu-window-button').style.display = "block";
@@ -66,9 +66,9 @@
 
         }
 
-        var display_addon_modifier = function () {
-            document.getElementById('addon-name').value = "HEAP";
-            document.getElementById('addon-price').value = "test";
+        var display_addon_modifier = function (name, price) {
+            document.getElementById('addon-name').value = name;
+            document.getElementById('addon-price').value = price;
 
             document.getElementById('window-header').innerText = "modify Addon";
 
@@ -101,9 +101,8 @@
             document.getElementById("flavor-forms").style.display = "block";
         }
         
-        async function delete_inventory(id) {
-            console.log("function: ", id);
-            fetch('delete_inventory', {
+        async function delete_with_post(id, route_name) {
+            fetch(route_name, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -125,16 +124,24 @@
             window.location.reload();
         }
 
+        async function delete_inventory(id) {
+            console.log("function: ", id);
+            delete_with_post(id, 'delete_inventory');
+        }
+
         async function delete_menu_item(id) {
             console.log("delete menu", id);
+            delete_with_post(id, 'delete_menu_item');
         }
 
         async function delete_addon(id) {
             console.log("delete addon", id);
+            delete_with_post(id, 'delete_addon');
         }
 
         async function delete_flavor(id) {
             console.log("delete flavor", id);
+            delete_with_post(id, 'delete_flavor');
         }
     </script>
 </head>
@@ -213,7 +220,7 @@
         <% for (var i in menu_items) {%>
             <div class="grid">
                 <p>Name: <%=menu_items[i].name%> Price: <%=menu_items[i].price%><p>
-                <button onclick='display_menu_item_modifier()'>Edit</button>
+                <button onclick='display_menu_item_modifier("<%=menu_items[i].name%>", "<%=menu_items[i].price%>")'>Edit</button>
                 <button class="delete-button" onclick='delete_menu_item("<%=menu_items[i].id%>")'>Delete</button>
             </div>
         <% } %>
@@ -225,7 +232,7 @@
         <% for (var i in addons) {%>
             <div class="grid">
                 <p>Name: <%=addons[i].name%><p>
-                <button onclick='display_addon_modifier()'>Edit</button>
+                <button onclick='display_addon_modifier("<%=addons[i].name%>", "<%=addons[i].price%>")'>Edit</button>
                 <button class="delete-button" onclick='delete_addon("<%=addons[i].id%>")'>Delete</button>
             </div>
         <% } %>
