--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/style.css">
     
     <script>
+        var stored_id;
+
         var add = function () {
             fetch('add');
             fetch('hitNum')
@@ -17,6 +19,7 @@
 
         var display_inventory_modifier = function (id, ingredient, amount, cost_per_amount) {
             console.log("mod: ", id, ingredient, amount, cost_per_amount);
+            stored_id = id;
 
             document.getElementById('ingredient').value = ingredient;
             document.getElementById('amount').value = amount;
@@ -41,13 +44,14 @@
             document.getElementById('modify-inventory-window-button').style.display = "none";
         }
 
-        var display_menu_item_modifier = function (name, price) {
+        var display_menu_item_modifier = function (id, name, price) {
+            stored_id = id;
             document.getElementById('tea-type').value = name;
             document.getElementById('tea-price').value = price;
 
             document.getElementById('window-header').innerText = "Modify Menu Item";
-            document.getElementById('add-menu-window-button').style.display = "block";
-            document.getElementById('modify-menu-window-button').style.display = "none";
+            document.getElementById('add-menu-window-button').style.display = "none";
+            document.getElementById('modify-menu-window-button').style.display = "block";
 
             document.getElementById("inventory-forms").style.display = "none";
             document.getElementById("menu-item-forms").style.display = "block";
@@ -66,7 +70,8 @@
 
         }
 
-        var display_addon_modifier = function (name, price) {
+        var display_addon_modifier = function (id, name, price) {
+            stored_id = id;
             document.getElementById('addon-name').value = name;
             document.getElementById('addon-price').value = price;
 
@@ -100,7 +105,7 @@
             document.getElementById("addon-forms").style.display = "none";
             document.getElementById("flavor-forms").style.display = "block";
         }
-        
+
         async function delete_with_post(id, route_name) {
             fetch(route_name, {
                 method: 'POST',
@@ -143,6 +148,69 @@
             console.log("delete flavor", id);
             delete_with_post(id, 'delete_flavor');
         }
+
+        async function add_modify_post(form_name, route_name) {
+            console.log("add_mod", stored_id);
+            
+            var form = document.getElementById(form_name);
+            var form_data = new FormData(form);
+            const data = Object.fromEntries(form_data.entries());
+
+            fetch(route_name, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({"id": stored_id, "data": data})
+            })
+            .then (response => {
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+
+            await fetch('menu_inventory');
+            console.log("test");
+            window.location.reload();
+        }
+
+        async function modify_inventory() {
+            add_modify_post('inventory-forms', 'modify-inventory');
+        }
+
+        async function add_inventory() {
+            await fetch('max_inventory_id')
+                .then(response => response.json())
+                .then(data => stored_id = data + 1)
+                .catch(error => console.log(error));
+
+            console.log("add inv stored: ", stored_id);
+            add_modify_post('inventory-forms', 'add-inventory');
+        }
+
+        async function modify_menu_item() {
+            console.log("mod menu stored: ", stored_id);
+        }
+
+        async function add_menu_item() {
+            console.log("add menu stored: ", stored_id);
+        }
+
+        async function modify_addon() {
+            console.log("mod addon stored: ", stored_id);
+        }
+
+        async function add_addon() {
+            console.log("add addon stored: ", stored_id);
+        }
+
+        async function add_flavor() {
+            console.log("add flavor stored: ", stored_id);
+        }
     </script>
 </head>
 
@@ -160,46 +228,42 @@
     
     <div class="modify-window">
         <h2 id="window-header">Modify placeholder window</h2>
-        <!--
-            <button onclick='add()'>Hi</button>
-            <p id="hits"></p>
-        -->
     
-        <div id="inventory-forms">
+        <form id="inventory-forms" onsubmit="return false">
             <label for="ingredient" id="ingredient-name">Ingredient</label>
             <input name="ingredient-form" id="ingredient" type="text"></input>
             <label for="amount" id="amount-value">Amount</label>
             <input name="amount-form" id="amount" type="text"></input>
             <label for="cost-per" id="cost-per-value">Cost Per Amount</label>
             <input name="cost-per-form" id="cost-per" type="text"></input>
-            <button id="modify-inventory-window-button">Modify</button>
-            <button id="add-inventory-window-button">Add</button>
-        </div>
+            <button id="modify-inventory-window-button" onclick='modify_inventory()'>Modify</button>
+            <button id="add-inventory-window-button" onclick='add_inventory()'>Add</button>
+        </form>
 
-        <div id="menu-item-forms">
+        <form id="menu-item-forms" onsubmit="return false">
             <label for="tea-type" id="tea-name">Tea Type</label>
             <input name="tea-form" id="tea-type" type="text"></input>
             <label for="tea-price" id="tea-price-label">Price</label>
             <input name="tea-price-form" id="tea-price" type="text"></input>
-            <button id="modify-menu-window-button">Modify</button>
-            <button id="add-menu-window-button">Add</button>
-        </div>
+            <button id="modify-menu-window-button" onclick='modify_menu_item()'>Modify</button>
+            <button id="add-menu-window-button" onclick='add_menu_item()'>Add</button>
+        </form>
 
-        <div id="addon-forms">
+        <form id="addon-forms" onsubmit="return false">
             <label for="addon-name" id="addon-label">Addon</label>
             <input name="addon-name-form" id="addon-name" type="text"></input>
             <!--do not want modification for the tea type, but we want modification of pricing-->
             <label for="addon-price" id="addon-price-label">Price</label>
             <input name="addon-price-form" id="addon-price" type="text"></input>
-            <button id="modify-addon-window-button">Modify</button>
-            <button id="add-addon-window-button">Add</button>
-        </div>
+            <button id="modify-addon-window-button" onclick='modify_addon()'>Modify</button>
+            <button id="add-addon-window-button" onclick='add_addon()'>Add</button>
+        </form>
 
-        <div id="flavor-forms">
+        <form id="flavor-forms" onsubmit="return false">
             <label for="flavor-name" id="flavor-label">Flavor</label>
             <input name="flavor-name-form" id="flavor-name" type="text"></input>
-            <button id="add-addon-window-button">Add</button>
-        </div>
+            <button id="add-addon-window-button" onclick='add_flavor()'>Add</button>
+        </form>
     </div>
 
     <div class="container">
@@ -220,7 +284,7 @@
         <% for (var i in menu_items) {%>
             <div class="grid">
                 <p>Name: <%=menu_items[i].name%> Price: <%=menu_items[i].price%><p>
-                <button onclick='display_menu_item_modifier("<%=menu_items[i].name%>", "<%=menu_items[i].price%>")'>Edit</button>
+                <button onclick='display_menu_item_modifier("<%=menu_items[i].id%>", "<%=menu_items[i].name%>", "<%=menu_items[i].price%>")'>Edit</button>
                 <button class="delete-button" onclick='delete_menu_item("<%=menu_items[i].id%>")'>Delete</button>
             </div>
         <% } %>
@@ -232,7 +296,7 @@
         <% for (var i in addons) {%>
             <div class="grid">
                 <p>Name: <%=addons[i].name%><p>
-                <button onclick='display_addon_modifier("<%=addons[i].name%>", "<%=addons[i].price%>")'>Edit</button>
+                <button onclick='display_addon_modifier("<%=addons[i].id%>", "<%=addons[i].name%>", "<%=addons[i].price%>")'>Edit</button>
                 <button class="delete-button" onclick='delete_addon("<%=addons[i].id%>")'>Delete</button>
             </div>
         <% } %>
