got employee addition, deletion, and modification working fully

--- a/views/menu_inventory.ejs
+++ b/views/menu_inventory.ejs
@@ -173,9 +173,9 @@
                 console.error('Error:', error);
             });
 
-            //await fetch('menu_inventory');
-            //console.log("test");
-            //window.location.reload();
+            await fetch('menu_inventory');
+            console.log("test");
+            window.location.reload();
         }
 
         async function modify_inventory() {
