--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -7,8 +7,83 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <script>
+        var stored_id;
+        //when this javascript and menu inventory javascript is combined, this duplicate will
+        //need to be removed
+        async function delete_with_post(id, route_name) {
+            fetch(route_name, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({"id": id})
+            })
+            .then (response => {
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+
+            await fetch('employees');
+            console.log("test");
+            window.location.reload();
+        }
+
+        async function delete_employee(id) {
+            delete_with_post(id, 'delete_employee');
+        }
+
+        async function add_modify_post(form_name, route_name) {
+            var form = document.getElementById(form_name);
+            var form_data = new FormData(form);
+
+            var checkbox = document.getElementById('employee-access');
+            form_data.set('employee-access-form', checkbox.checked);
+
+            const data = Object.fromEntries(form_data.entries());
+
+            fetch(route_name, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({"id": stored_id, "data": data})
+            })
+            .then (response => {
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+
+            await fetch('employees');
+            console.log("test");
+            window.location.reload();
+        }
+
+        async function modify_employee() {
+            add_modify_post('employee-forms', 'modify_employee');
+        }
+
+        async function add_employee() {
+            await fetch('max_employee_id')
+                .then(response => response.json())
+                .then(data => stored_id = data + 1)
+                .catch(error => console.log(error));
+
+            add_modify_post('employee-forms', 'add_employee');
+        }
+
         var display_employee_data = function (id, hours, manager_access, password) {
-            console.log("view: ", id);
+            stored_id = id;
+
             document.getElementById('window-header').innerText = "View Employee Data";
             document.getElementById('employee-number-p').innerText = "Employee #" + id;
             document.getElementById('employee-hours-p').innerText = "Weekly Hours Worked: " + hours;
@@ -20,12 +95,13 @@
         }
     
         var display_employee_modifier = function (id, hours, manager_access, password) {
-            console.log("view: ", id);
+            stored_id = id;
+
             document.getElementById('window-header').innerText = "Modify Employee Data";
             document.getElementById('employee-number').innerText = "Employee #" + id;
 
             document.getElementById('employee-hours').value = hours;
-            document.getElementById('employee-access').value = manager_access;
+            document.getElementById('employee-access').checked = (manager_access === 'true');
             document.getElementById('employee-password').value = password;
             
             document.getElementById('add-window-button').style.display = "none";
@@ -36,13 +112,12 @@
         }
     
         var display_employee_adder = function () {
-            console.log("view: ");
             display_employee_modifier("");
             document.getElementById('window-header').innerText = "Add Employee";
             document.getElementById('employee-number').innerText = "";
 
             document.getElementById('employee-hours').value = "";
-            document.getElementById('employee-access').value = "";
+            document.getElementById('employee-access').checked = false;
             document.getElementById('employee-password').value = "";
             
             document.getElementById('add-window-button').style.display = "block";
@@ -74,18 +149,18 @@
             <p id="employee-password-p"></p>
         </div>
 
-        <form id="employee-forms">
+        <form id="employee-forms" onsubmit="return false">
             <label for="employee-id" id="employee-number"></label>
             
             <label for="employee-hours" id="hours">Hours</label>
             <input name="employee-hours-form" id="employee-hours" type="text"></input>
             <label for="employee-access" id="access">Manager</label>
-            <input name="employee-access-form" id="employee-access" type="text"></input>
+            <input name="employee-access-form" id="employee-access" type="checkbox"></input>
             <label for="employee-password" id="password">Password</label>
             <input name="employee-password-form" id="employee-password" type="text"></input>
 
-            <button Id="modify-window-button">Modify</button>
-            <button Id="add-window-button">Add</button>
+            <button Id="modify-window-button" onclick='modify_employee()'>Modify</button>
+            <button Id="add-window-button" onclick='add_employee()'>Add</button>
         </form>
     </div>
 
@@ -95,7 +170,7 @@
                 <p>Employee info: Employee #<%=employees[i].employee_id%><p>
                 <button onclick='display_employee_data("<%=employees[i].employee_id%>", "<%=employees[i].weekly_hours_worked%>", "<%=employees[i].manager_access%>", "<%=employees[i].password%>")'>View</button>
                 <button onclick='display_employee_modifier("<%=employees[i].employee_id%>", "<%=employees[i].weekly_hours_worked%>", "<%=employees[i].manager_access%>", "<%=employees[i].password%>")'>Edit</button>
-                <button class="delete-button">Delete</button>
+                <button class="delete-button" onclick='delete_employee("<%=employees[i].employee_id%>")'>Delete</button>
             </div>
         <% } %>
         
