--- a/views/css/cashier-style.css
+++ b/views/css/cashier-style.css
@@ -95,6 +95,8 @@ footer{
     border: 2px solid #333;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    overflow-y: auto;
+    max-height: 100%;
 }
 
 .popup.active {
@@ -123,6 +125,8 @@ footer{
     padding: 10px;
     min-height: 200px;
     position: relative;
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 .checkout-items{
