--- a/views/cashier_order_page.ejs
+++ b/views/cashier_order_page.ejs
@@ -33,8 +33,8 @@
             <% } %>
         </div>
         <div class = "checkout-menu">
-            <div class="checkout-items" id = "checkout-items"></div>
-            <button class ="checkout-button">Checkout</button>
+            <div class="checkout-items" id = "checkout-items"></div>    
+            <a href="/cashier/checkout"><button class ="checkout-button">Checkout</button></a>
         </div>
     </div>
 
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div>
-            <label for="Quantity" style="padding: 20px;">Quantity:</label>
+            <label for="Quantity" style="padding: 20px;" value="1">Quantity:</label>
             <input type="text" id="Quantity" name="Quantity">
         </div>
 
@@ -73,27 +73,19 @@
 
         <div class = "slider-container" id="sugar-slider" style="padding: 20px;">
             <span>0%</span>
-            <input type ="range" min="0" max="100" step="20" list="steplist" onchange="updateSugarSlider()" value="80">
+            <input type ="range" min="0" max="100" step="20" onchange="updateSugarSlider()" value="80">
             <span>120%</span>
-            <datalist id="steplist">
-                <option>0%</option>
-                <option>20%</option>
-                <option>50%</option>
-                <option>80%</option>
-                <option>100%</option>
-                <option>120%</option>
-            </datalist>
             <div>Sugar Level: <span id="sugar-level">100%</span></div>
         </div>
         <div class = "slider-container" id="ice-slider" style="padding: 20px">
             <span>No Ice</span>
-            <input type ="range" min="0" max="3" step="1" list="steplist" onchange="updateIceSlider()">
+            <input type ="range" min="0" max="3" step="1" onchange="updateIceSlider()" value="2">
             <span>Extra Ice</span>
             <div>Ice Level:<span id="ice-level">Regular</span></div>
         </div>
         <div>
             <% for (var i in addons){%>
-                <input type="checkbox" id="'<%addons[i].name%>'" name="addon" value="false">
+                <input type="checkbox" name="addon" value="false" data-name = "<%=addons[i].name%>" data-price="<%=addons[i].price%>">
                 <label for="addon" style="display: block;">
                     <img height="20px" width="20px"><br>
                     <h4><%=addons[i].name%></h4><br>
